snd_uaudio: Initialize mixer_lock with MTX_RECURSE

Fixes:		fc9dc8482396 ("snd_uaudio: Lock usbd_transfer_start() in uaudio_mixer_ctl_set()")
PR:		296682
Sponsored by:	The FreeBSD Foundation
MFC after:	3 days

(cherry picked from commit 954001a9dd363da9184706657eb34f9622bb220f)